Readings Site should work now

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<h1>Main Portfolio</h1>
 			<h2> Work by Week</h2>
-			<li><a href="https://https://scoulter01.github.io/Readings.html">Reading Responses</li>
+			<li><a href="https://scoulter01.github.io/Readings.html">Reading Responses</li>
 			<li><a href="https://open.spotify.com/user/hexsmlzjvcxsfq1o8mfj98c2v"> Spotify Profile </li>
 	</body>
 	</html>
