--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 	<head> 
+	<link href="GitWebsitev1.css" rel="stylesheet" type="text/css">
 	<title> Simeon's Website </title>
 	</head>
 
 	<body>
-		<h1>Main Portfolio</h1>
+		<h1>Main Idea</h1>
 			<h2> Work by Week</h2>
 			<li><a href="https://scoulter01.github.io/Readings.html">Reading Responses</li>
 			<li><a href="https://open.spotify.com/user/hexsmlzjvcxsfq1o8mfj98c2v"> Spotify Profile </li>
