--- a/Readings.html
+++ b/Readings.html
@@ -1,6 +1,6 @@
 <html>
 	<head> 
-	<link href="GitWebsite.css" rel="stylesheet" type="text/css">
+	<link href="GitWebsitev2.css" rel="stylesheet" type="text/css">
 	<title> Simeon's Website </title>
 	</head>
 
@@ -10,6 +10,7 @@
 
 			<p id="Paragraph1">	John Berger’s writings on Ways of Seeing walks through the perception of work and the sort of levels there are involved in pieces of work. As technology has advanced as seen with the creation of the camera, various pieces or works of art have changed in how they are disseminated and digested. Initially images couldn’t exactly be reproduced unless the artist made clones or copies. Interestingly this changes as the invention of things like the camera and other technology come along allowing for the rapid reproduction of work. This is furthermore demonstrated in the advent of sound being added to the moving image which allows for the work to be manipulated further.</p>
 
+			
 			<p class="Paragraph2">	Following the analysis of the environment of an image as well as its general meaning in relation to things surrounding it, is the addition of the spectator in images.  In the case of women there is in a sense in certain classical paintings an acknowledgement of the spectator or viewer in most paintings with direct gazes at the viewer, or a degree of involvement of the viewer in certain works. To specify this, we have the mentioning of paintings that involved Adam & Eve in some work. In some cases the judgment that is involved in the work is not fully realized unless it involves the viewer who in a sense condemns the two as God did in the bible.</p>
 
 			<p>	Relating it back to today, we should pay attention to every aspect of our work whether it's the work itself, what surrounds our work, and the overarching experience and value our work offers. Not just in an artistic sense but also an intrinsic value in our general work. As a sort of rule of thumb from Berger in general when we create aspects of work, there are intertwined layers involved in what we make and its meaning. Berger wants people to realize that when they are creating something that there needs to be levels of focus and attention to detail to how everything synergizes with each other. Whether it is how something is framed, the music that is used if there is, what is involved in the image and so forth.</p>
