all new websites

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<body>
 		<h1>Main Idea</h1>
 			<h2> Work by Week</h2>
-			<li><a href="https://scoulter01.github.io/Readings.html">Reading Responses</li>
+			<li><a href="https://scoulter01.github.io/Readings.html">Reading Response For Week 02</li>
+			<li><a href="https://scoulter01.github.io.git/week3.html">Reading Response For Week 03</li>
 			<li><a href="https://open.spotify.com/user/hexsmlzjvcxsfq1o8mfj98c2v"> Spotify Profile </li>
 	</body>
 	</html>
