Message for pushing stuff

--- a/GridTest.html
+++ b/GridTest.html
@@ -12,7 +12,7 @@
         A bunch of words to fill up the grid space to limit test the area. Really hope this works this time
       </div1>
 
-      <div2>Two</div2>
+      <div2> <img src="nala.jpeg" height="200" width="300"> Test </div2>
 
       <div>Three</div>
       
