PRAY U  PASS BOY

--- a/GridTest.html
+++ b/GridTest.html
@@ -14,7 +14,9 @@
 
       <div2> <img src="nala.jpeg" height="200" width="300"> Test </div2>
 
-      <div>Three</div>
+      <div> 
+          Three 
+      </div>
       
       <div>Four</div>
       
