--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
 	</head>
 
 	<body>
-		<h1>Main Idea</h1>
+		<h1>My Homepage</h1>
 			<h2> Work by Week</h2>
-			<li><a href="https://scoulter01.github.io/Readings.html">Reading Response For Week 02</li>
-			<li><a href="https://scoulter01.github.io/week3.html">Reading Response For Week 03</li>
-			<li><a href="https://scoulter01.github.io/GridTest.html"> Grid Work</li>
-			<li><a href="https://open.spotify.com/user/hexsmlzjvcxsfq1o8mfj98c2v"> Spotify Profile </li>
+
+		<div>
+				<ul>
+				<li> <a href="https://scoulter01.github.io/Readings.html">Reading Response For Week 02 </a> </li>
+				<li> <a href="https://scoulter01.github.io/week3.html">Reading Response For Week 03 </a> </li> 
+				<li> <a href="https://scoulter01.github.io/GridTest.html"> Grid Work </a> </li>
+				<li> <a href="https://scoulter01.github.io/Project1.html"> Nasty Nets Project </a> </li>
+				<li> <a href="https://open.spotify.com/user/hexsmlzjvcxsfq1o8mfj98c2v"> Spotify Profile </a> </li>
+			</ul>
+		</div>
 	</body>
 	</html>
