--- a/P2.html
+++ b/P2.html
@@ -8,20 +8,28 @@
 		<main>
 		<div class="Grid">
 			<div class="grid-Header">
-				<h1  id="HRInfo"> Header:NastyNets <a href=""> </h1>  
+				<h1  id="HRInfo"> Header:NastyNets </h1>  
 			</div>
 
+			<div class="grid-Body">
+			<h2> Page 2</h2>
 
-			<div class="grid-Body"> 
-			<h2> Page 2 </h2>
+			<p>  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
 			</div>
 
-			<div class="grid-Aside"> 
+			<div class="grid-Aside"> Nav/Aside 
 
 			</div>
 		
-			<div class="grid-Footer"> Footer 
+			<div class="grid-Footer"> 					
+				 <a href="https://scoulter01.github.io"> Main Site </a> 
+				 <a href="https://scoulter01.github.io/Project1.html"> Page 3 </a>
 
 			</div>
 
