--- a/Project1.html
+++ b/Project1.html
@@ -1,30 +1,39 @@
 <html>
 	<head> 
 	<link href="Project1.css" rel="stylesheet" type="text/css">
-	<title> Grid NastyNets Project </title>
+	<title> NastyNets Project S1 </title>
 	</head>
 
 <body>
-	<div class="Grid">
-		<div class="grid-Header">
-			<h1> Header:NastyNets </h1>  
+		<main>
+		<div class="Grid">
+			<div class="grid-Header">
+				<h1  id="HRInfo"> Header:NastyNets </h1>  
+			</div>
 
-		</div>
+			<div class="grid-Body">
+			<h2> Page 1</h2>
+			<p>  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
+			 </p>
 
-		<div class="grid-Body"> Body 
-			<h2></h2>
+			</div>
 
-		</div>
+			<div class="grid-Aside"> Nav/Aside 
 
-		<div class="grid-Aside"> Nav/Aside 
-
-		</div>
+			</div>
 		
-		<div class="grid-Footer"> Footer 
+			<div class="grid-Footer"> 					
+				 <a href="https://scoulter01.github.io"> Main </a> 
+				 <a href="https://scoulter01.github.io/P2.html"> Next </a>
 
-		</div>
+			</div>
 
-
-</body>
+		</main>
+	</body>
 </html>
