Basic Framework Done?

--- a/P3.html
+++ b/P3.html
@@ -1,7 +1,7 @@
 <html>
 	<head> 
 	<link href="Project1.css" rel="stylesheet" type="text/css">
-	<title> astyNets Project S2 </title>
+	<title> styNets Project S3 </title>
 	</head>
 
 <body>
@@ -12,7 +12,7 @@
 			</div>
 
 			<div class="grid-Body">
-			<h2> Page 2</h2>
+			<h2> Page 3</h2>
 
 			<p>  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -25,17 +25,16 @@
 
 			<div class="grid-Aside"> Nav/Aside
 				<p>
-				<ul> <a href="https://scoulter01.github.io"> Main Site </a> </ul>
-				<ul>  <a href="https://scoulter01.github.io/P2.html"> Page 2 </a> </ul>
-				<ul>  <a href="https://scoulter01.github.io/P3.html"> Page 3 </a> </ul>
+					<ul> <a href="https://scoulter01.github.io"> Main Site </a> </ul>
+					<ul>  <a href="https://scoulter01.github.io/P2.html"> Page 2 </a> </ul>
+					<ul>  <a href="https://scoulter01.github.io/P3.html"> Page 3 </a> </ul>
 				</p> 
 
 			</div>
 		
 			<div class="grid-Footer"> 					
-				<p>
-					
-				</p>
+				 <a href="https://scoulter01.github.io"> Main Site </a> 
+				 <a href="https://scoulter01.github.io/Project1.html"> Page 3 </a>
 
 			</div>
 
