--- a/Project1.html
+++ b/Project1.html
@@ -13,24 +13,27 @@
 
 			<div class="grid-Body">
 			<h2> Page 1</h2>
+
 			<p>  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-			 </p>
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
 			</div>
 
-			<div class="grid-Aside"> Nav/Aside 
+			<div class="grid-Aside"> Nav/Aside
+				<p>
+				<ul> <a href="https://scoulter01.github.io"> Main Site </a> </ul>
+				<ul>  <a href="https://scoulter01.github.io/P2.html"> Page 2 </a> </ul>
+				<ul>  <a href="https://scoulter01.github.io/P3.html"> Page 3 </a> </ul>
+				</p> 
 
 			</div>
 		
 			<div class="grid-Footer"> 					
-				 <a href="https://scoulter01.github.io"> Main </a> 
-				 <a href="https://scoulter01.github.io/P2.html"> Next </a>
+				Student Work By: Simeon & Adiba
 
 			</div>
 
