--- a/P2.html
+++ b/P2.html
@@ -1,41 +1,44 @@
 <html>
 	<head> 
 	<link href="Project1.css" rel="stylesheet" type="text/css">
-	<title> astyNets Project S2 </title>
+	<title> NastyNets Project S2 </title>
 	</head>
 
 <body>
 		<main>
 		<div class="Grid">
 			<div class="grid-Header">
-				<h1  id="HRInfo"> Header:NastyNets </h1>  
+				<h1  id="HRInfo"> Ribzome Pair Project Assignment:Nasty Nets </h1>
 			</div>
 
 			<div class="grid-Body">
-			<h2> Page 2</h2>
+			<h2> Exhibit Display</h2>
 
-			<p>  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+			<p>  Main Page Website (Image A1): As can be seen, there’s a nav bar on the left hand side of the website that sits solely on the top of the page. Each post is separated by date, username and a title post. As you scroll through it looks and feels reminiscent of early social media. The site itself is very minimal, consisting of a default white background black writing with the blue navigation bar on the side. The site is organized by the month and year which are links you can click on the left and they bring you to another page with all the posts from different artists within that specific month. Although the site looks plain, the artwork is what makes the website stand out from a variation of GIFs and collages. Interestingly enough, there are often posts that feature sound and old school animation software weaved between various still posts. </p>
 
 			</div>
 
-			<div class="grid-Aside"> Nav/Aside
-				<p>
-				<ul> <a href="https://scoulter01.github.io"> Main Site </a> </ul>
-				<ul>  <a href="https://scoulter01.github.io/P2.html"> Page 2 </a> </ul>
-				<ul>  <a href="https://scoulter01.github.io/P3.html"> Page 3 </a> </ul>
-				</p> 
+			<div class="grid-Aside"> 
+				<p class="SmallText"> "Table of Contents" <p>
+				<ul> 
+					<li> <a href="https://scoulter01.github.io"> Main Site </a> </li>
+					<li> <a href="https://scoulter01.github.io/Project1.html"> Page 1 </a> </li>
+					<li>  <a href="https://scoulter01.github.io/P2.html"> Page 2 (You're Here) </a> </li>
+					<li>  <a href="https://scoulter01.github.io/P3.html"> Page 3 </a> </li>
+					<li> <a href="https://scoulter01.github.io/P4.html"> Assets/Images </a> </li>
+				</ul>
 
 			</div>
 		
 			<div class="grid-Footer"> 					
-				<p>
-					
-				</p>
+				<p class="SmallText"> Student Work By: Simeon & Adiba </p>
+				<p class="SmallText"> Resources: </p>
+				<ul> 
+					<li> <a href="https://www.are.na/block/1992681"> NA Block Site </a> </li>
+					<li> <a href="https://anthology.rhizome.org/nasty-nets"> Nasty Nets Anthology </a> </li>
+					<li> <a href="http://archive.rhizome.org/artbase/53981/nastynets.com/indexe5d0.html?author=34"> Exhibit</a> </li>
+					<li> <a href="https://sites.rhizome.org/surfclubs/#Nasty_Nets"> Surf Club </a> </li>
+				</ul>	
 
 			</div>
 
