--- a/P3.html
+++ b/P3.html
@@ -1,40 +1,49 @@
 <html>
 	<head> 
 	<link href="Project1.css" rel="stylesheet" type="text/css">
-	<title> styNets Project S3 </title>
+	<title> NastyNets Project S3 </title>
 	</head>
 
 <body>
 		<main>
 		<div class="Grid">
 			<div class="grid-Header">
-				<h1  id="HRInfo"> Header:NastyNets </h1>  
+				<h1  id="HRInfo"> Ribzome Pair Project Assignment:Nasty Nets </h1> 
 			</div>
 
 			<div class="grid-Body">
-			<h2> Page 3</h2>
+			<h2> Our Experience With The Work</h2>
 
-			<p>  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+			<h3>Simeon: </h3>
+					<p> The longer you spend on the website the more it begins to feel like a fever dream. As mentioned earlier, the website genuinely feels like early social media and it seems to choose its aesthetics wisely. To specify further, it feels like some of today’s message boards/socials like Twitter or 4Chan. The entire thing feels like a relic of its time where a lot of the pages feature a lot of glitch art, old advertisements, and broken items (Websites,gifs, flash videos etc.). Additionally, breaking down users, from the few shown it feels like each curator’s posts were either just curated for a niche, comedy posts, or chaotic nonsense|for a lack of better term|. Each artist had their own direction that they would focus on in the group and they stuck to it. 
+					</p>
 
+			<h3>Adiba: </h3>
+					<p>As I explored the website, I noticed that it reminded me of platforms like twitter, tumblr and myspace. The site consists of people’s random thoughts, internet searches, interests, and youtube links. Overall everything seems like a non-toxic form of today’s social media platforms. The navigation through the site is very easy, its just hard to get to the homepage because when you click the site title on the top of the navigation bar it sends you to something completely different.
+					</p>
 			</div>
 
-			<div class="grid-Aside"> Nav/Aside
-				<p>
-					<ul> <a href="https://scoulter01.github.io"> Main Site </a> </ul>
-					<ul>  <a href="https://scoulter01.github.io/P2.html"> Page 2 </a> </ul>
-					<ul>  <a href="https://scoulter01.github.io/P3.html"> Page 3 </a> </ul>
-				</p> 
+			<div class="grid-Aside"> 
+				<p class="SmallText"> "Table of Contents" <p>
+				<ul> 
+					<li> <a href="https://scoulter01.github.io"> Main Site </a> </li>
+					<li> <a href="https://scoulter01.github.io/Project1.html"> Page 1 </a> </li>
+					<li>  <a href="https://scoulter01.github.io/P2.html"> Page 2 </a> </li>
+					<li>  <a href="https://scoulter01.github.io/P3.html"> Page 3 (You're Here) </a> </li>
+					<li> <a href="https://scoulter01.github.io/P4.html"> Assets/Images </a> </li>
+				</ul>
 
 			</div>
 		
 			<div class="grid-Footer"> 					
-				 <a href="https://scoulter01.github.io"> Main Site </a> 
-				 <a href="https://scoulter01.github.io/Project1.html"> Page 3 </a>
+				<p class="SmallText"> Student Work By: Simeon & Adiba </p>
+				<p class="SmallText"> Resources: </p>
+				<ul> 
+					<li> <a href="https://www.are.na/block/1992681"> NA Block Site </a> </li>
+					<li> <a href="https://anthology.rhizome.org/nasty-nets"> Nasty Nets Anthology </a> </li>
+					<li> <a href="http://archive.rhizome.org/artbase/53981/nastynets.com/indexe5d0.html?author=34"> Exhibit</a> </li>
+					<li> <a href="https://sites.rhizome.org/surfclubs/#Nasty_Nets"> Surf Club </a> </li>
+				</ul>	
 
 			</div>
 
