--- a/Project1.html
+++ b/Project1.html
@@ -8,32 +8,36 @@
 		<main>
 		<div class="Grid">
 			<div class="grid-Header">
-				<h1  id="HRInfo"> Header:NastyNets </h1>  
+				<h1  id="HRInfo"> Ribzome Pair Project Assignment:Nasty Nets </h1>  
 			</div>
 
 			<div class="grid-Body">
-			<h2> Page 1</h2>
+			<h2> Nasty Nets Introduction:</h2>
 
-			<p>  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+			<p>  Nasty Nets Introductory Information: Nasty Nets was a blog created by an internet surfing club that was active from August 2006-2012. Surf Clubs, a term Nasty Nets themselves coined, was an internet space used to share items across the internet whether it be media pieces or their own work. The group consisted of about thirty nine artists and featured over a thousand posts. These artists were emerging amateurs who used the internet in different ways to express themselves. Artists often featured wacky glitch art when providing their own work, and to encourage one another would comment under each other's posts. </p>
 
 			</div>
 
-			<div class="grid-Aside"> Nav/Aside
-				<p>
-				<ul> <a href="https://scoulter01.github.io"> Main Site </a> </ul>
-				<ul>  <a href="https://scoulter01.github.io/P2.html"> Page 2 </a> </ul>
-				<ul>  <a href="https://scoulter01.github.io/P3.html"> Page 3 </a> </ul>
-				</p> 
-
+			<div class="grid-Aside"> 
+				<p class="SmallText"> "Table of Contents" <p>
+				<ul> 
+					<li> <a href="https://scoulter01.github.io"> Main Site </a> </li>
+					<li> <a href="https://scoulter01.github.io/Project1.html"> Page 1 (You're Here)</a> </li>
+					<li>  <a href="https://scoulter01.github.io/P2.html"> Page 2 </a> </li>
+					<li>  <a href="https://scoulter01.github.io/P3.html"> Page 3 </a> </li>
+					<li> <a href="https://scoulter01.github.io/P4.html"> Assets/Images </a> </li>
+				</ul>
 			</div>
 		
 			<div class="grid-Footer"> 					
-				Student Work By: Simeon & Adiba
+				<p class="SmallText"> Student Work By: Simeon & Adiba </p>
+				<p class="SmallText"> Resources: </p>
+				<ul> 
+					<li> <a href="https://www.are.na/block/1992681"> NA Block Site </a> </li>
+					<li> <a href="https://anthology.rhizome.org/nasty-nets"> Nasty Nets Anthology </a> </li>
+					<li> <a href="http://archive.rhizome.org/artbase/53981/nastynets.com/indexe5d0.html?author=34"> Exhibit</a> </li>
+					<li> <a href="https://sites.rhizome.org/surfclubs/#Nasty_Nets"> Surf Club </a> </li>
+				</ul>	
 
 			</div>
 
