--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 				<li> <a href="https://scoulter01.github.io/week3.html">Reading Response For Week 03 </a> </li> 
 				<li> <a href="https://scoulter01.github.io/GridTest.html"> Grid Work </a> </li>
 				<li> <a href="https://scoulter01.github.io/Project1.html"> Nasty Nets Project </a> </li>
-				<li> <a href="https://scoulter01.github.io/W8.html://"> Animation Work</a> </li>
-				<li> <a href="https://scoulter01.github.io/W9.html">	 Media Response </a> </li> 
+				<li> <a href="https://scoulter01.github.io/W8.html"> Animation Work</a> </li>
+				<li> <a href="https://scoulter01.github.io/W9.html"> Media Response </a> </li> 
 				<li> <a href="https://open.spotify.com/user/hexsmlzjvcxsfq1o8mfj98c2v"> Spotify Profile </a> </li>
 			</ul>
 		</div>
