--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<li> <a href="https://scoulter01.github.io/Project1.html"> Nasty Nets Project </a> </li>
 				<li> <a href="https://scoulter01.github.io/W8.html"> Animation Work</a> </li>
 				<li> <a href="https://scoulter01.github.io/W9.html"> Media Response </a> </li> 
+				<li> <a href="https://scoulter01.github.io/main.html"> Final Project</a> </li>
 				<li> <a href="https://open.spotify.com/user/hexsmlzjvcxsfq1o8mfj98c2v"> Spotify Profile </a> </li>
 			</ul>
 		</div>
