--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 			<!-- the nav bar bs -->
 				<div class="tnav">
 					<a class="active" 
-								href="Website.html"> Home </a>
-								<a href="">Notes on Work </a>
-								<a href=""> Contact</a>
+								href="main.html"> Home </a>
+								<a href="gallery.html">Notes on Work </a>
+								<a href="index.html"> Contact</a>
 					
 				</div>
 			<!-- main body of site -->
@@ -22,27 +22,53 @@
 				 </div>
 
 			<!-- Image work -->
-				<div class="row">
-						<div class="column">
+				<div class="Group-1">
+						<div class="G1">
 							<img src="C1.jpg" alt="Recent City Shot 1">
 						</div>
-						<div class="column">
+						<div class="G2">
 							<img src="C2.jpg" alt="Recent City Shot 2">	
 						</div>
-						<div class="column">
+						<div class="G3">
 							<img src="C3.jpg" alt="Recent City Shot 3">	
 						</div>
 				</div>
-
 				<!-- Con't of Body change img -->
+				<div class="head">
 				<div class="left">  
-					<img src="C1.jpg">
+					<img src="C6.jpg">
 				</div>
 
 
-				<div class="right">
-						<h3>Recent Shots</h3>
-						<p>Etiam eu purus commodo, rhoncus eros sit amet, pretium mauris. Aliquam vitae lacus eros. Nullam molestie nunc auctor pretium malesuada. Proin et sapien justo. Aenean facilisis, nisi in pharetra tempor, enim ipsum sagittis enim, ac eleifend eros risus eu velit. Curabitur rhoncus metus nulla, at euismod eros hendrerit nec. </p>
+					<div class="right">
+						<h2>Who Am I?</h2>
+						<p>Hi, my name is Simeon Coulter aka Unky.o7. I am a 21 yr old CUNY Hunter College Student, who has a thing for taking pictures, as well as being a small part time media major in the process. If you're interested in helping or just checking out my general work, try visiting my instagram page over <a href="https://www.instagram.com/unky.o7">here</a></p>
+					</div>
 				</div>
+			<hr>
+				<!-- Secondary Image Group -->
+				<div class="Group-2">
+					<div class="LG2">
+						<img src="C4.jpg">
+					</div>
+
+					<div class="RG2">
+						<h2>Profile: KBJJ</h2>
+						<p>KJ is definition of trail and error, with his passion he has learned that failing and patience is the path to true success. With a passion for skateboarding, KJ aims to put his multiple skills to good use.  When he isn't skating he can be seen streaming, providing for his family, and giving advice to the youth on a daily basis, he aims to succeed no matter what.<a href="https://www.twitch.tv/popebenoit22">Link to his Stream </a> </p>
+					</div>
+				</div>	
+			<hr>		
+				<!-- Tertiary Image Group -->
+				<div class="Group-2">
+					<div class="LG2">
+						<img src="C5.jpg">
+						
+					</div>
+
+					<div class="RG2">
+						<h2>Profile: JG</h2>
+						<p>Jeremy is someone that has changed for the better every turn of his life. Through the hardships of early childhood, to finding out what his desires are and what he wants to make of himself in the future years of his life. Jeremy has undergone many changes to refer as himself as “The Beacon of Positivity” where he livestreams and also helping out as many people he can. <a href="https://www.twitch.tv/pidgeycalvo">Link to his Stream </a></p>
+					</div>
+				</div>	
 		</body>
 </html>
